; ModuleID = '/home/carl/AnghaBench/sway/sway/commands/extr_floating_minmax_size.c_cmd_floating_maximum_size.c'
source_filename = "/home/carl/AnghaBench/sway/sway/commands/extr_floating_minmax_size.c_cmd_floating_maximum_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }
%struct.cmd_results = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"floating_maximum_size\00", align 1
@max_usage = common dso_local global i32 0, align 4
@config = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.cmd_results* @cmd_floating_maximum_size(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = load i8**, i8*** %4, align 8
  %7 = load i32, i32* @max_usage, align 4
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @config, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @config, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = call %struct.cmd_results* @handle_command(i32 %5, i8** %6, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %7, i32* %9, i32* %11)
  ret %struct.cmd_results* %12
}

declare dso_local %struct.cmd_results* @handle_command(i32, i8**, i8*, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
